src/objects/Agreement_Details__c.object
<CustomObject>
    <description>This table will store detail information of Agreements</description>
    <fields>
        <fullName>Agreement_Contract_Exipiration_Date__c</fullName>
        <description>Identifies the date the contract expires.</description>
        <label>CED</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_NEW__c</fullName>
        <description>Indicates agreement was created in past 6 months or the start date is within the past 6 months</description>
        <formula>IF(Agreement_Start_Date__c &gt;= today() -180 &amp;&amp; Flag_New__c = True &amp;&amp; BEGINS(Text(Agreement_Type__c),&apos;NA&apos;),&quot;N-NEW&quot;,IF(CreatedDate &gt;= now() -180 &amp;&amp; Flag_New__c = True &amp;&amp; BEGINS(Text(Agreement_Type__c),&apos;NA&apos;),&quot;N-NEW&quot;,IF(Agreement_Start_Date__c &gt;= today() -180 &amp;&amp; Flag_New__c = False &amp;&amp; BEGINS(Text(Agreement_Type__c),&apos;NA&apos;),&quot;N&quot;,IF(CreatedDate &gt;= now() -180 &amp;&amp; Flag_New__c = False &amp;&amp; BEGINS(Text(Agreement_Type__c),&apos;NA&apos;),&quot;N&quot;,IF(Agreement_Start_Date__c &lt; today() -180 &amp;&amp; CreatedDate &lt; now() -180 &amp;&amp; BEGINS(Text(Agreement_Type__c),&apos;NA&apos;),&quot;N&quot;, &quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Agreement created in past 6 months or the start date is within the past 6 months</inlineHelpText>
        <label>Agreement_NEW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_New_2__c</fullName>
        <description>trigger to populate value from Agreement New formula field</description>
        <label>Agreement New 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <description>Stores the G&amp;K Agreement Number (IE. Tag Number)</description>
        <externalId>true</externalId>
        <label>Number</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <description>Identifies the date the Agreement was initiated (ie. when the contract was signed)</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <description>Identifies the status of the Agreement</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>Identifies the type of agreement</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>KA - Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KA - Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA - Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA - Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA - Subcontract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Execute_Scheduler__c</fullName>
        <formula>IF( Agreement_NEW__c !=  Agreement_New_2__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Execute Scheduler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_New__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by National Accounts to identify agreements that should have the &quot;N-NEW&quot; status displayed when the create or start date are within 6 months.</description>
        <label>Flag New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Duns_Assigned__c</fullName>
        <description>Used for linking 1 or more agreements to a global duns number for reporting (ex. top500 Customer Report)</description>
        <externalId>true</externalId>
        <label>Global Duns Assigned</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPL_Additional_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPL_Central_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Central Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPL_Central_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Central Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPL_Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IPL_Contract_Person__c</fullName>
        <description>Customer Contract Person</description>
        <label>Contract Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPL_Duplicate_Invoice_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Invoice Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPL_Duration__c</fullName>
        <label>Duration</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPL_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPL_Energy_Surcharge__c</fullName>
        <label>Energy Surcharge</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPL_Enterprise_Number__c</fullName>
        <externalId>true</externalId>
        <label>Enterprise Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPL_Invoice_Stop_Minimum__c</fullName>
        <label>Invoice Stop Minimum</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPL_Override_Prep_Charge__c</fullName>
        <label>Override  Prep Charge</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPL_Price_Adjustment_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Adjustment Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPL_Service_Level__c</fullName>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IPL_Setup_Waiver_Ends__c</fullName>
        <label>Setup Waiver Ends</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPL_Swing_Suit_Waiver_Ends__c</fullName>
        <label>Swing Suit Waiver Ends</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPL_Swing_Suit_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Swing Suit Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPL_Waive_Initial_Setup_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive Initial Setup Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPL_Waste_Water_Minimum__c</fullName>
        <label>Waste Water Minimum</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPL_Waste_Water_Percentage__c</fullName>
        <label>Waste Water Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Master_HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links a specific Master HQ location to this agreement and other agreements as necessary.  This in turn allows 1 master HQ location to be linked to multiple agreements as needed.</description>
        <label>Master Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Details</relationshipLabel>
        <relationshipName>Agreement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month_to_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a month to month agreement.</description>
        <label>Month to Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_AutoReplace_Charge__c</fullName>
        <label>Override AutoReplace Charge</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Deposit_Charge__c</fullName>
        <label>Override Deposit Charge</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Nametag_Charge__c</fullName>
        <label>Override Nametag Charge</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <label>Override Emblem Charge</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>delete_this__c</fullName>
        <formula>Agreement_NEW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>delete this</label>
        <type>Text</type>
    </fields>
    <label>Agreement Detail</label>
    <listViews>
        <fullName>ActiveNationalAgreementswoowner</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <columns>Agreement_Contract_Exipiration_Date__c</columns>
        <columns>Month_to_Month__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agreement_Type__c</field>
            <operation>equals</operation>
            <value>NA - Mandatory,NA - Preferred,NA - Subcontract</value>
        </filters>
        <filters>
            <field>Agreement_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Administrator</value>
        </filters>
        <label>Active National Agreements w/o owner</label>
    </listViews>
    <listViews>
        <fullName>AgreementLookupbyName</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Master_HQ_Account__c</columns>
        <columns>Global_Duns_Assigned__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <columns>Agreement_Contract_Exipiration_Date__c</columns>
        <columns>Agreement_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>BuyBoard</value>
        </filters>
        <label>Agreement Look-up by Name</label>
    </listViews>
    <listViews>
        <fullName>AgreementLookupbyNumber</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <columns>Agreement_Contract_Exipiration_Date__c</columns>
        <columns>Agreement_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agreement_Number__c</field>
            <operation>equals</operation>
            <value>003462</value>
        </filters>
        <label>Agreement Look-up by Number</label>
    </listViews>
    <listViews>
        <fullName>AgreementOwnerBeck</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Krabbe</value>
        </filters>
        <label>Agreement Owner - Beck</label>
    </listViews>
    <listViews>
        <fullName>AgreementOwnerGould</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NationaLease</value>
        </filters>
        <label>Agreement Owner - NationaLease</label>
    </listViews>
    <listViews>
        <fullName>AgreementOwnerMenards</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NCGA</value>
        </filters>
        <filters>
            <field>Agreement_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>NCGA</label>
    </listViews>
    <listViews>
        <fullName>AgreementOwnerone</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Agreement_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>OneSource</value>
        </filters>
        <label>Agreement Owner - Onesource</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Agreement_Number__c</columns>
        <columns>NAME</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <columns>Agreement_Contract_Exipiration_Date__c</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Month_to_Month__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ByName</fullName>
        <columns>Agreement_Number__c</columns>
        <columns>NAME</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <columns>Agreement_Contract_Exipiration_Date__c</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Month_to_Month__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Roger</value>
        </filters>
        <label>By Name</label>
    </listViews>
    <listViews>
        <fullName>GeneralElectric</fullName>
        <columns>Agreement_Number__c</columns>
        <columns>NAME</columns>
        <columns>Agreement_Type__c</columns>
        <columns>Agreement_Start_Date__c</columns>
        <columns>Agreement_Contract_Exipiration_Date__c</columns>
        <columns>Agreement_Status__c</columns>
        <columns>Month_to_Month__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Global</value>
        </filters>
        <label>Global</label>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>